--- a/arch/arm64/configs/onclite-perf_defconfig
+++ b/arch/arm64/configs/onclite-perf_defconfig
@@ -445,11 +445,11 @@ CONFIG_ARCH_NR_GPIO=1280
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ_100=y
+# CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
 # CONFIG_HZ_300 is not set
-# CONFIG_HZ_1000 is not set
-CONFIG_HZ=100
+CONFIG_HZ_1000=y
+CONFIG_HZ=1000
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -5088,3 +5088,5 @@ CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 CONFIG_FINGERPRINT_BOOST=y
 CONFIG_QUICK_CHARGE=y
 CONFIG_QPNP_QNOVO5=y
+CONFIG_INTELLI_THERMAL=y
+CONFIG_QPNP_VIBRATOR=y
