--- a/arch/arm64/configs/onclite-perf_defconfig
+++ b/arch/arm64/configs/onclite-perf_defconfig
@@ -5090,3 +5090,11 @@ CONFIG_QUICK_CHARGE=y
 CONFIG_QPNP_QNOVO5=y
 CONFIG_INTELLI_THERMAL=y
 CONFIG_QPNP_VIBRATOR=y
+CONFIG_FRANDOM=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
+CONFIG_THERMAL_MONITOR=y
+CONFIG_LIMITS_MONITOR=y
+CONFIG_LIMITS_LITE_HW=y
+CONFIG_CUSTOM_HOTPLUG=y
+CONFIG_MSM_HOTPLUG=y
+CONFIG_THERMAL_TSENS8974=y
