--- a/arch/arm64/configs/onclite-perf_defconfig
+++ b/arch/arm64/configs/onclite-perf_defconfig
@@ -480,7 +480,7 @@ CONFIG_BOUNCE=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
-# CONFIG_CLEANCACHE is not set
+CONFIG_CLEANCACHE=y
 # CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
@@ -493,7 +493,7 @@ CONFIG_ZSMALLOC=y
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_VMAP_LAZY_PURGING_FACTOR=32
 CONFIG_GENERIC_EARLY_IOREMAP=y
-# CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
+CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 # CONFIG_IDLE_PAGE_TRACKING is not set
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 CONFIG_PROCESS_RECLAIM=y
@@ -5079,3 +5079,7 @@ CONFIG_QMI_ENCDEC=y
 # Addtional
 CONFIG_WIREGUARD=y
 CONFIG_WIREGUARD_DEBUG=y
+CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
+CONFIG_ZCACHE=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
